<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="#8B0000"
    android:visibility="visible"
    tools:context=".FRC2019">


    <TextView
        android:id="@+id/match"
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:tag="@string/match_tag"
        android:text="Match 000 | Red"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline25"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline25"
        app:layout_constraintTop_toBottomOf="@+id/team" />

    <TextView
        android:id="@+id/team"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:tag="@string/team_tag"
        android:text="Team 0000"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline25"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline25"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:tag="@string/next_tag"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline75" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:tag="@string/previous_tag"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline25"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="Teleop"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline75"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline75"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Thing 1"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/match" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />



</android.support.constraint.ConstraintLayout>