<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="#8B0000"
    android:visibility="visible"
    tools:context=".FRC2019">

    <Switch
        android:id="@+id/foundation_moved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@+id/foundation_moved_text"
        app:layout_constraintTop_toTopOf="@+id/foundation_moved_text" />


    <LinearLayout
        android:id="@+id/stones_delivered"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/stones_delivered_text"
        app:layout_constraintTop_toTopOf="@+id/stones_delivered_text">

        <CheckBox
            android:id="@+id/stones_delivered1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">


            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_delivered2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_delivered3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_delivered4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_delivered5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stones_placed_auto"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/stones_delivered"
        app:layout_constraintTop_toTopOf="@+id/stones_placed_text">

        <CheckBox
            android:id="@+id/stones_placed1_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">


            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_placed2_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_placed3_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_placed4_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/stones_placed5_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sky_stones"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/stones_placed_auto"
        app:layout_constraintTop_toTopOf="@+id/sky_stones_text">

        <CheckBox
            android:id="@+id/sky_stones1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">


            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/sky_stones2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/sky_stones3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/sky_stones4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>

        <CheckBox
            android:id="@+id/sky_stones5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false">

            <tag
                android:id="@id/store"
                android:value="@string/store_true" />
        </CheckBox>
    </LinearLayout>

    <Switch
        android:id="@+id/parked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="@+id/sky_stones"
        app:layout_constraintTop_toTopOf="@+id/parked_text" />

    <TextView
        android:id="@+id/match"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:tag="@string/match_tag"
        android:text="Match #000"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline25"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline25"
        app:layout_constraintTop_toBottomOf="@+id/team" />

    <TextView
        android:id="@+id/team"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:tag="@string/team_tag"
        android:text="Team 00000"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline25"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline25"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:tag="@string/next_tag"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="161dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="Autonomous"
        android:textColor="#ffffff"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foundation_moved_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="Foundation Moved"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match" />

    <TextView
        android:id="@+id/stones_delivered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="Stones Delivered"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foundation_moved_text" />

    <TextView
        android:id="@+id/stones_placed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Stones Placed"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/stones_delivered_text"
        app:layout_constraintTop_toBottomOf="@+id/stones_delivered_text" />

    <TextView
        android:id="@+id/sky_stones_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Sky Stones"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/stones_placed_text"
        app:layout_constraintTop_toBottomOf="@+id/stones_placed_text" />

    <TextView
        android:id="@+id/parked_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Parked"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/sky_stones_text"
        app:layout_constraintTop_toBottomOf="@+id/sky_stones_text" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />



</android.support.constraint.ConstraintLayout>